# ChangeLog for media-sound/guayadeque
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> guayadeque-9999.ebuild,
  +metadata.xml:
  initial commit
