@@ -1,3 +1,3 @@
-EBUILD guayadeque-9999.ebuild 952 RMD160 aa599d67dddcb506532ba62dfd7df631171313f5 SHA1 d88dfc8264b185fa895755362ec3a210dc78b621 SHA256 93a7e26433ab612563a9395a1a1a3dc98351c693044563ebbc60e5ce729092f5
-MISC ChangeLog 235 RMD160 d36c7d94c9dc256a17b6be7cdb7a7f3512ef331b SHA1 d8f99f38047a202487f26be7ffddac0b11a2c949 SHA256 ca80f2482c09a873510834513064348fada71d760e805afaf3cceec296d64ebe
+EBUILD guayadeque-9999.ebuild 1377 RMD160 665a7d91e1db6ebb13c2ed445cbd23068fe89165 SHA1 ab4a757cf2f84c8b08811fea24c7789929c6e5c9 SHA256 1afb4ac829b03dfb31a2ed2b605e3065d2a4fd7ca57107b000e5208933cd68ad
+MISC ChangeLog 326 RMD160 4a46b9b51bb999d2a5996a2d5959d1a49bca6339 SHA1 71ad44a3bee340464e6fbaaa0238b397c05245e0 SHA256 1478953aa2c4570618acbc12eae9c338633ddd6fd06de08bb732355a4824407f
 MISC metadata.xml 393 RMD160 53fc35f59b3aca0602bd160509d8c0ade0a3c067 SHA1 94449f8ab51d363d27a30ab256723b541cafac56 SHA256 42504869aa8735cfcd70fb5875b92cc5bcd701fb754747c652afe0641514ea94
