@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Oct 2010; Rion <rion4ik@notagmail.com> guayadeque-9999.ebuild:
+  add linguas support
+
   06 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> guayadeque-9999.ebuild,
   +metadata.xml:
   initial commit
